# nv-shmem

./: README.md  meson.build  meson_options.txt
configurations/: shm_mapping.json  shm_namespace_config.json
lib/: config_json_reader.cpp  error_logger.cpp  managed_shmem.cpp  meson.build  shm_sensor_aggregator.cpp  shmem_map.cpp  telemetry_mrd_client.cpp  telemetry_mrd_producer.cpp
lib/impl/: config_json_reader.hpp  error_logger.hpp  managed_shmem.hpp  shm_sensor_aggregator.hpp  shm_sensormap_intf.hpp  shmem_map.hpp
lib/include/: meson.build  shm_common.h  telemetry_mrd_client.hpp  telemetry_mrd_producer.hpp
lib/utils/: metric_report_utils.hpp  port_utils.hpp  time_utils.hpp
smbus-telemetry-target/lib/: meson.build  smbus_telemetry_target_api.cpp  smbus_telemetry_update.cpp
smbus-telemetry-target/lib/include/: error.hpp  meson.build  smbus_telemetry_target_api.hpp  smbus_telemetry_update.hpp
smbus-telemetry-target/test/: meson.build  smbus_telemetry_target_utest.cpp
smbus-telemetry-target/test/config/: row1-failure.csv  row2-failure.csv  row3-failure-wrong-dataformat.csv  row3-failure-wrong-dbusiface.csv  row3-failure-wrong-dbusobjpath.csv  row3-failure-wrong-dbusproperty.csv  row3-failure-wrong-length.csv  row3-failure-wrong-offset.csv  row3-failure-wrong-stalebit.csv  row3-failure-wrong-staleoffset.csv  row3-failure.csv  row4-failure.csv  smbus-telemetry-config.csv
test/: meson.build  sensor_map_test.cpp
tools/: aggregation_service_tester.cpp  meson.build  nv_shmem_tool.cpp
