option('libonly', type: 'boolean', description: 'Build library only')
option('tests', type: 'feature', description: 'Build tests')
option('nvidia-shmem', type: 'feature', description: 'Build nvidia-shmem')
option('platform-system-id', type : 'string', value : 'system', description : 'Platform specific computer system id, which is required to fill redfish metric property.')
option('platform-device-prefix', type : 'string', value : '', description : 'Platform specific device name prefix, which is required to add platform name in metric report name.')
option('enable-shm-debug', type: 'feature', value: 'disabled', description: 'Enable this flag for additional debug traces. This flag should be used only for debug purpose and it will impact performance.')
option('log_interval_seconds', type: 'integer', value: 2700, description: 'Time interval in seconds to suppress duplicate log entries')
option('max_log_entries', type: 'integer', value: 10000, description: 'Maximum log entries that can be stored in a error map after that we will skip errors')